# controller/dto/category.go
@@ -1,7 +1,5 @@
 package dto
 
-import "github.com/miaoming3/wallpaper/models"
-
 type CategoryIndex struct {
 	Name   string `uri:"name" form:"name" query:"page"`
 	Status string ` uri:"status" form:"status" query:"status"`
@@ -9,10 +7,10 @@ type CategoryIndex struct {
 }
 
 type SaveCategory struct {
-	Name   string                `json:"name" form:"name" binding:"required"`
-	Pid    uint                  `json:"pid" form:"pid" default:"0"`
-	Sort   uint                  `json:"sort" form:"sort" default:"50"`
-	Status models.CategoryStatus `json:"status" form:"Status" default:"1"`
+	Name   string `json:"name" form:"name" binding:"required"`
+	Pid    uint   `json:"pid" form:"pid" default:"0"`
+	Sort   uint   `json:"sort" form:"sort" default:"50"`
+	Status uint   `json:"status" form:"status" default:"1"`
 }
 
 type UpdateCategory struct {
