# docs/swagger.json
@@ -65,13 +65,20 @@
         "/category/save": {
             "post": {
                 "description": "创建分类",
+                "consumes": [
+                    "application/json",
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "分类管理"
                 ],
                 "summary": "创建分类",
                 "parameters": [
                     {
-                        "description": "Category data to save",
+                        "description": "保存分类参数",
                         "name": "saveCategory",
                         "in": "body",
                         "required": true,
@@ -298,12 +305,8 @@
                     "default": 50
                 },
                 "status": {
-                    "default": 1,
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.CategoryStatus"
-                        }
-                    ]
+                    "type": "integer",
+                    "default": 1
                 }
             }
         },
@@ -332,12 +335,8 @@
                     "default": 50
                 },
                 "status": {
-                    "default": 1,
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.CategoryStatus"
-                        }
-                    ]
+                    "type": "integer",
+                    "default": 1
                 }
             }
         },
@@ -351,17 +350,6 @@
                     "type": "integer"
                 }
             }
-        },
-        "models.CategoryStatus": {
-            "type": "integer",
-            "enum": [
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "StatusOn",
-                "StatusOff"
-            ]
         },
         "response.ApiResponse": {
             "type": "object",
